--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas~=1.2.3
+pandas~=1.4.3
 sklearn~=0.0
 matplotlib~=3.3.4
 imblearn~=0.0
-pytest~=6.2.5
+scikit-learn~=1.1.1
+pytest~=7.1.2
 nltk~=3.7
