--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 pandas~=1.4.3
-sklearn~=0.0
+#sklearn~=0.0
 matplotlib~=3.3.4
 imblearn~=0.0
 scikit-learn~=1.1.1
 pytest~=7.1.2
 nltk~=3.7
-tensorflow~=2.8.0
-matplotlib~=3.3.4
-tensorflow-gpu~=2.8.0
-tensorflow-hub~=0.12.0
+
